# pdf2md-cli

./: .gitignore  INSTALL.md  README.md  install.sh  package.json  pdf2md.py  pyproject.toml  requirements.txt
src/: index.ts
src/commands/: config.ts  convert.ts
src/utils/: config.ts  gemini.ts  pdf.ts
